--- a/css/styles.scss
+++ b/css/styles.scss
@@ -67,7 +67,7 @@ $total-width: 100%;
 }
 
 body {
-	padding-top: 50px;
+	margin-top: 60px;
 }
 
 .container {
@@ -313,7 +313,7 @@ float: none;
 //Model-S
 #model-s {
 	text-align: center;
-	background: url('../img/autopilot.jpg') no-repeat center center fixed;
+	background: url('../img/autopilot-faded.jpg') no-repeat center center fixed;
 	margin-bottom: 30px;
 	.model-s-inner {
 		position: relative;
@@ -340,7 +340,7 @@ float: none;
 //Model-X
 #model-x {
 	text-align: center;
-	background: url('../img/model-x-inside.jpg') no-repeat center center fixed;
+	background: url('../img/model-x-inside-faded.jpg') no-repeat center center fixed;
 	margin-bottom: 30px;
 	.model-x-inner {
 		position: relative;
@@ -367,7 +367,7 @@ float: none;
 //Model-3
 #model-3 {
 	text-align: center;
-	background: url('../img/model-3.jpg') no-repeat center center fixed;
+	background: url('../img/model-3-faded.jpg') no-repeat center center fixed;
 	margin-bottom: 30px;
 	.model-3-inner {
 		position: relative;
@@ -393,7 +393,7 @@ float: none;
 // Portfolio
 #portfolio {
 	background-color: #FFF4F2;
-	padding: 55px 0;
+	padding: 100px 0 55px 0;
 	.owl-controls {
 		margin-top: 60px;
 	}
@@ -576,7 +576,7 @@ float: none;
 // our team
 
 #our-team {
-	padding: 55px 0 10px 0;
+	padding: 100px 0 10px 0;
 	text-align: auto;
 	overflow: auto;
 	.single-col {
