--- a/css/style.css
+++ b/css/style.css
@@ -964,4 +964,4 @@ footer {
     .copyright p a {
       color: #D4D4D4; }
 
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=style.css.map */
